Fix section-container on mobile device

--- a/css/style.css
+++ b/css/style.css
@@ -108,10 +108,6 @@ footer.page-footer {
 }
 
 @media only screen and (max-width : 992px) {
-  .section-container .section {
-    position: absolute;
-    top: 40%;
-  }
   #index-banner .section {
     top: 10%;
   }
